drivers: pinctrl: implement pinctrl-somc
add pinctrl-somc used by Sony devices
to enable the driver set
CONFIG_PINCTRL_SOMC=y

Signed-off-by: Alin Jerpelea <alin.jerpelea@sonymobile.com>
Signed-off-by: Pavel Dubrova <pashadubrova@gmail.com>

--- a/drivers/pinctrl/qcom/Kconfig
+++ b/drivers/pinctrl/qcom/Kconfig
@@ -232,4 +232,10 @@ config PINCTRL_SLPI
 	  This is the pinctrl, pinmux and pinconf driver for the
 	  SLPI pin controller block.
 
+config PINCTRL_SOMC
+	bool "SoMC pinctrl driver"
+	default n
+	help
+	  Select this to enable SoMC pinctrl driver.
+
 endif
