regulator: qpnp-labibb-regulator: Implement Sony SoMC extensions
This APIs is used to:
  - set precharge of LAB regulator
  - set soft-start of LAB regulator
  - set pull-down of LAB regulator
  - set current max of LAB regulator
  - set soft-start of IBB regulator
  - set pull-down of IBB regulator
  - set current max of IBB regulator

Was taken from 47.2.A.6.30 kernel-copyleft.

Signed-off-by: Pavel Dubrova <pashadubrova@gmail.com>

--- a/drivers/regulator/Kconfig
+++ b/drivers/regulator/Kconfig
@@ -734,6 +734,13 @@ config REGULATOR_QPNP_LABIBB
           negative boost regulator. LAB/IBB regulators can also be used
           together for LCD or AMOLED.
 
+config REGULATOR_QPNP_LABIBB_SOMC
+	bool "Qualcomm Technologies, Inc. QPNP LAB/IBB regulator - SoMC extensions"
+	depends on REGULATOR_QPNP_LABIBB
+	help
+	  Select this to enable SoMC extensions to QTI QPNP LAB/IBB
+	  regulator driver.
+
 config REGULATOR_QPNP_LCDB
         tristate "Qualcomm Technologies, Inc. QPNP LCDB support"
         depends on SPMI
