--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -164,6 +164,29 @@ config TOUCHSCREEN_CHIPONE_ICN8318
 	  To compile this driver as a module, choose M here: the
 	  module will be called chipone_icn8318.
 
+config TOUCHSCREEN_CLEARPAD
+	tristate "Synaptics ClearPad touchscreen driver"
+	help
+	  Say Y here if you have Synaptics ClearPad touchscreen.
+
+	  If unsure, say N.
+
+config TOUCHSCREEN_CLEARPAD_I2C
+	tristate "Synaptics ClearPad I2C bus connection"
+	depends on I2C && TOUCHSCREEN_CLEARPAD
+	help
+	  Say Y here if the touchscreen is connected via I2C bus.
+
+	  If unsure, say N.
+
+config TOUCHSCREEN_CLEARPAD_RMI_DEV
+	tristate "Synaptics ClearPad RMI Dev"
+	depends on GPIO_SYSFS && TOUCHSCREEN_CLEARPAD && TOUCHSCREEN_CLEARPAD_I2C
+	help
+	  Say Y here to enable Synaptics ClearPad RMI dev.
+
+	  If unsure, say N.
+
 config TOUCHSCREEN_CY8CTMG110
 	tristate "cy8ctmg110 touchscreen"
 	depends on I2C
