--- a/drivers/power/supply/qcom/Kconfig
+++ b/drivers/power/supply/qcom/Kconfig
@@ -103,6 +103,19 @@ config QPNP_SMBCHARGER
 	  The driver also offers relevant information to userspace via the
 	  power supply framework.
 
+config QPNP_SMBCHARGER_EXTENSION
+	tristate "QPNP SMB Charger driver extension"
+	depends on QPNP_SMBCHARGER
+	help
+	  Say Y here to enable extensional QPNP SMB Charger driver functions.
+
+config QPNP_SMBCHARGER_ID_POLL
+	bool "Support ID polling function on QPNP SMB Charger driver"
+	depends on QPNP_SMBCHARGER_EXTENSION
+	help
+	  Say Y here to enable the ID polling function on the QPNP SMB Charger
+	  driver.
+
 config QPNP_QNOVO
 	bool "QPNP QNOVO driver"
 	depends on MFD_SPMI_PMIC
