power: supply: qcom: Implement qpnp-fg extensions
Was taken from 34.4.A.0.364 kernel-copyleft.

Signed-off-by: Pavel Dubrova <pashadubrova@gmail.com>

--- a/drivers/power/supply/qcom/Kconfig
+++ b/drivers/power/supply/qcom/Kconfig
@@ -9,6 +9,12 @@ config QPNP_FG
 	  fuel gauge. The state of charge is reported through a BMS power
 	  supply property and also sends uevents when the capacity is updated.
 
+config QPNP_FG_EXTENSION
+	tristate "QPNP fuel gauge driver extension"
+	depends on QPNP_FG
+	help
+	  Say Y here to enable extensional QPNP fuel gauge functions.
+
 config QPNP_FG_GEN3
 	tristate "QPNP GEN3 fuel gauge driver"
 	depends on MFD_SPMI_PMIC
