--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -587,6 +587,13 @@ config TEST_IRQ_REQUESTER
 
 	  If in doubt, say N.
 
+config LDO_VIBRATOR
+	tristate "LDO Vibrator"
+	help
+	  This option enables device driver support for the vibrator
+	  on the LDO line. The vibrator is controlled using the
+	  timed output class.
+
 source "drivers/misc/c2port/Kconfig"
 source "drivers/misc/eeprom/Kconfig"
 source "drivers/misc/cb710/Kconfig"
