--- a/drivers/usb/misc/Kconfig
+++ b/drivers/usb/misc/Kconfig
@@ -288,6 +288,12 @@ config USB_TYPEC_MUX_NXP5150A
 	  Say Y here if you want to use NXP CC Logic Type-C Chipset NXP5150A
 	  for CC detection and Mux control.
 
+config USB_CC_FUSB301
+	bool "FUSB301 Configuration Channel Controller for USB Type-C"
+	depends on I2C
+	help
+	  Say Y here if you want to enable support FUSB301 CC Controller for USB Type-C.
+
 config USB_QCOM_DIAG_BRIDGE
 	tristate "USB QTI diagnostic bridge driver"
 	depends on USB
