misc: Initial kernel panic through power key driver
This driver contains kernel force crash functionality
through power key. Triggers panic if power key is hold
for more than 10secs.

Signed-off-by: Pavel Dubrova <pashadubrova@gmail.com>

--- a/drivers/misc/Makefile
+++ b/drivers/misc/Makefile
@@ -71,6 +71,7 @@ obj-$(CONFIG_TEST_IRQ_REQUESTER) += irq_requester.o
 
 obj-$(CONFIG_LDO_VIBRATOR)	+= ldo_vibrator.o
 obj-$(CONFIG_NFC_PN547)		+= pn547.o
+obj-$(CONFIG_POWERKEY_FORCECRASH)	+= powerkey_forcecrash.o
 
 lkdtm-$(CONFIG_LKDTM)		+= lkdtm_core.o
 lkdtm-$(CONFIG_LKDTM)		+= lkdtm_bugs.o
