--- a/drivers/soc/qcom/Kconfig
+++ b/drivers/soc/qcom/Kconfig
@@ -914,6 +914,16 @@ config QCOM_AOP_DDRSS_COMMANDS
 	help
 	  This driver allows messages to be sent to the AOP to affect the DDRSS
 	  behavior.
+
+config MSM_BAM_DMUX
+	bool "BAM Data Mux Driver"
+	depends on SPS
+	help
+	  Support Muxed Data Channels over BAM interface.
+	  BAM has a limited number of pipes.  This driver
+	  provides a means to support more logical channels
+	  via muxing than BAM could without muxing.
+
 endmenu
 
 config QCOM_HYP_CORE_CTL
