--- a/drivers/clk/msm/Makefile
+++ b/drivers/clk/msm/Makefile
@@ -17,4 +17,10 @@ ifeq ($(CONFIG_COMMON_CLK_MSM), y)
 obj-$(CONFIG_ARCH_MDM9607)	+= clock-gcc-9607.o
 # ACPU clock
 obj-$(CONFIG_ARCH_MDM9607)	+= clock-a7.o
+
+# MSM8956/76
+obj-$(CONFIG_ARCH_MSM8916)	+= clock-cpu-8976.o
+obj-$(CONFIG_ARCH_MSM8916)	+= clock-gcc-8976.o
+obj-$(CONFIG_ARCH_MSM8916)	+= clock-rcgwr.o
+
 endif
