--- a/arch/arm64/boot/dts/qcom/msm8956.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8956.dtsi
@@ -82,11 +82,23 @@
 		#size-cells = <2>;
 		ranges;
 
-		other_ext_mem: other_ext_region@85e00000 {
+		removed_region0: removed_region@85e00000 {
 			compatible = "removed-dma-pool";
 			no-map;
-			reg = <0x0 0x85b00000 0x0 0x0d00000>;
-			label = "other_ext_mem";
+			reg = <0x0 0x85b00000 0x0 0x00800000>;
+			label = "removed_region0";
+		};
+
+		smem_region: smem@86300000 {
+			no-map;
+			reg = <0x0 0x86300000 0x0 0x00100000>;
+		};
+
+		removed_region1: removed_region@86400000 {
+			compatible = "removed-dma-pool";
+			no-map;
+			reg = <0x0 0x86400000 0x0 0x00400000>;
+			label = "removed_region1";
 		};
 
 		modem_mem: modem_region@86c00000 {
@@ -172,7 +184,7 @@
 #include "msm8956-gpu.dtsi"
 #include "msm8956-mdss.dtsi"
 #include "msm8956-mdss-pll.dtsi"
-#include "msm-rdbg.dtsi"
+//#include "msm-rdbg.dtsi"
 
 &soc {
 	#address-cells = <1>;
@@ -180,25 +192,23 @@
 	ranges = <0 0 0 0xffffffff>;
 	compatible = "simple-bus";
 
-	/* SPMI Arbitrator HAS to be node #1!!! */
-        spmi_bus: qcom,spmi@200f000 {
-                compatible = "qcom,spmi-pmic-arb";
-                reg = <0x200f000 0x1000>,
-                        <0x2400000 0x800000>,
-                        <0x2c00000 0x800000>,
-                        <0x3800000 0x200000>,
-                        <0x200a000 0x2100>;
-                reg-names = "core", "chnls", "obsrvr", "intr", "cnfg";
-                interrupts = <GIC_SPI 190 IRQ_TYPE_NONE>;
+	spmi_bus: qcom,spmi@200f000 {
+		compatible = "qcom,spmi-pmic-arb";
+		reg = <0x200f000 0x1000>,
+			<0x2400000 0x800000>,
+			<0x2c00000 0x800000>,
+			<0x3800000 0x200000>,
+			<0x200a000 0x2100>;
+		reg-names = "core", "chnls", "obsrvr", "intr", "cnfg";
 		interrupt-names = "periph_irq";
-                qcom,channel = <0>;
-                qcom,ee = <0>;
-
-                #address-cells = <2>;
-                #size-cells = <0>;
-                interrupt-controller;
+		interrupts = <GIC_SPI 190 IRQ_TYPE_NONE>;
+		qcom,ee = <0>;
+		qcom,channel = <0>;
+		#address-cells = <1>;
+		#size-cells = <1>;
+		interrupt-controller;
 		#interrupt-cells = <4>;
-                cell-index = <0>;
+		cell-index = <0>;
 	};
 
 	arm64-cpu-erp {
@@ -727,7 +737,7 @@
 	};
 
 	qcom,sps {
-		compatible = "qcom,msm_sps_4k";
+		compatible = "qcom,msm-sps-4k";
 		qcom,pipe-attr-ee;
 	};
 
@@ -882,12 +892,6 @@
 		interrupts = <0 264 4>;
 		reg = <0xb1db000 0x4>;
 		qcom,lmh-trim-err-offset = <18>;
-	};
-
-	rpm_bus: qcom,rpm-smd {
-		compatible = "qcom,rpm-smd";
-		rpm-channel-name = "rpm_requests";
-		rpm-channel-type = <15>; /* SMD_APPS_RPM */
 	};
 
 	qcom,rmtfs_sharedmem@0 {
@@ -1414,76 +1418,108 @@
 		qcom,num-locks = <8>;
 	};
 
+	apcs: syscon@0b011008 {
+		compatible = "syscon";
+		reg = <0x0b011008 0x04>;
+	};
+
+	tcsr_mutex_block: syscon@1905000 {
+		compatible = "syscon";
+		reg = <0x1905000 0x20000>;
+	};
+
+	tcsr_mutex: hwlock {
+		compatible = "qcom,tcsr-mutex";
+		syscon = <&tcsr_mutex_block 0 0x1000>;
+		#hwlock-cells = <1>;
+	};
+
+	rpm_msg_ram: memory@60000 {
+		compatible = "qcom,rpm-msg-ram";
+		reg = <0x60000 0x8000>;
+	};
+
 	qcom,smem@86300000 {
 		compatible = "qcom,smem";
-		reg = <0x86300000 0x100000>,
-			<0x0b011008 0x4>,
-			<0x60000 0x8000>,
-			<0x193D000 0x8>;
-		reg-names = "smem", "irq-reg-base", "aux-mem1", "smem_targ_info_reg";
-		qcom,mpu-enabled;
+		memory-region = <&smem_region>;
+		qcom,rpm-msg-ram = <&rpm_msg_ram>;
+		hwlocks = <&tcsr_mutex 3>;
+	};
 
-		qcom,smd-modem {
-			compatible = "qcom,smd";
+	qcom,smd {
+		compatible = "qcom,smd";
+
+		modem {
 			qcom,smd-edge = <0>;
-			qcom,smd-irq-offset = <0x0>;
-			qcom,smd-irq-bitmask = <0x1000>;
-			interrupts = <0 25 1>;
+			qcom,ipc = <&apcs 0 12>;
+			interrupts = <GIC_SPI 25 IRQ_TYPE_EDGE_RISING>;
 			label = "modem";
-			qcom,not-loadable;
 		};
 
-		qcom,smsm-modem {
-			compatible = "qcom,smsm";
-			qcom,smsm-edge = <0>;
-			qcom,smsm-irq-offset = <0x0>;
-			qcom,smsm-irq-bitmask = <0x2000>;
-			interrupts = <0 26 1>;
-		};
-
-		qcom,smd-wcnss {
-			compatible = "qcom,smd";
+		wcnss {
 			qcom,smd-edge = <6>;
-			qcom,smd-irq-offset = <0x0>;
-			qcom,smd-irq-bitmask = <0x20000>;
-			interrupts = <0 142 1>;
+			qcom,ipc = <&apcs 0 16>;
+			interrupts = <GIC_SPI 142 IRQ_TYPE_EDGE_RISING>;
 			label = "wcnss";
 		};
 
-		qcom,smsm-wcnss {
-			compatible = "qcom,smsm";
-			qcom,smsm-edge = <6>;
-			qcom,smsm-irq-offset = <0x0>;
-			qcom,smsm-irq-bitmask = <0x80000>;
-			interrupts = <0 144 1>;
-		};
-
-		qcom,smd-adsp {
-			compatible = "qcom,smd";
+		adsp {
 			qcom,smd-edge = <1>;
-			qcom,smd-irq-offset = <0x0>;
-			qcom,smd-irq-bitmask = <0x100>;
-			interrupts = <0 289 1>;
+			qcom,ipc = <&apcs 0 8>;
+			interrupts = <GIC_SPI 289 IRQ_TYPE_EDGE_RISING>;
 			label = "adsp";
 		};
 
-		qcom,smsm-adsp {
-			compatible = "qcom,smsm";
-			qcom,smsm-edge = <1>;
-			qcom,smsm-irq-offset = <0x0>;
-			qcom,smsm-irq-bitmask = <0x200>;
-			interrupts = <0 290 1>;
+		rpm {
+			qcom,smd-edge = <15>;
+			qcom,ipc = <&apcs 0 0>;
+			interrupts = <GIC_SPI 168 IRQ_TYPE_EDGE_RISING>;
+			label = "rpm";
+
+			rpm_bus: qcom,rpm-smd {
+				compatible = "qcom,rpm-smd";
+				rpm-channel-name = "rpm_requests";
+				rpm-channel-type = <15>; /* SMD_APPS_RPM */
+			};
+		};
+	};
+
+	qcom,smsm {
+		compatible = "qcom,smsm";
+
+		#address-cells = <1>;
+		#size-cells = <0>;
+
+		qcom,ipc-1 = <&apcs 0 12>;
+		qcom,ipc-2 = <&apcs 0 9>;
+		qcom,ipc-3 = <&apcs 0 18>;
+
+		apps_smsm: apps@0 {
+			reg = <0>;
+			#qcom,smem-state-cells = <1>;
 		};
 
-		qcom,smd-rpm {
-			compatible = "qcom,smd";
-			qcom,smd-edge = <15>;
-			qcom,smd-irq-offset = <0x0>;
-			qcom,smd-irq-bitmask = <0x1>;
-			interrupts = <0 168 1>;
-			label = "rpm";
-			qcom,irq-no-suspend;
-			qcom,not-loadable;
+		modem_smsm: modem@1 {
+			reg = <1>;
+			interrupts = <GIC_SPI 26 IRQ_TYPE_EDGE_RISING>;
+
+			interrupt-controller;
+			#interrupt-cells = <2>;
+		};
+
+		wcnss_smsm: wcnss@6 {
+			reg = <6>;
+			interrupts = <GIC_SPI 144 IRQ_TYPE_EDGE_RISING>;
+
+			interrupt-controller;
+			#interrupt-cells = <2>;
+		};
+
+		adsp_smsm: adsp@1 {
+			interrupts = <GIC_SPI 290 IRQ_TYPE_EDGE_RISING>;
+
+			interrupt-controller;
+			#interrupt-cells = <2>;
 		};
 	};
 
@@ -1863,7 +1899,6 @@
 	qcom,lpass@c200000 {
 		compatible = "qcom,pil-tz-generic";
 		reg = <0xc200000 0x00100>;
-		interrupts = <0 293 1>;
 
 		vdd_cx-supply = <&pm8950_s2_level>;
 		qcom,proxy-reg-names = "vdd_cx";
@@ -1889,13 +1924,21 @@
 		qcom,firmware-name = "adsp";
 
 		/* GPIO inputs from lpass */
-		qcom,gpio-err-fatal = <&smp2pgpio_ssr_smp2p_2_in 0 0>;
-		qcom,gpio-proxy-unvote = <&smp2pgpio_ssr_smp2p_2_in 2 0>;
-		qcom,gpio-err-ready = <&smp2pgpio_ssr_smp2p_2_in 1 0>;
-		qcom,gpio-stop-ack = <&smp2pgpio_ssr_smp2p_2_in 3 0>;
+		interrupts-extended = <&wakegic 0 293 1>,
+				<&adsp_smp2p_in 0 0>,
+				<&adsp_smp2p_in 2 0>,
+				<&adsp_smp2p_in 1 0>,
+				<&adsp_smp2p_in 3 0>;
+
+		interrupt-names = "qcom,wdog",
+				"qcom,err-fatal",
+				"qcom,proxy-unvote",
+				"qcom,err-ready",
+				"qcom,stop-ack";
 
 		/* GPIO output to lpass */
-		qcom,gpio-force-stop = <&smp2pgpio_ssr_smp2p_2_out 0 0>;
+		qcom,smem-states = <&adsp_smp2p_out 0>;
+		qcom,smem-state-names = "qcom,force-stop";
 
 		memory-region = <&reloc_mem>;
 	};
@@ -1930,7 +1973,6 @@
 	qcom,pronto@a21b000 {
 		compatible = "qcom,pil-tz-generic";
 		reg = <0x0a21b000 0x3000>;
-		interrupts = <0 149 1>;
 		qcom,mas-crypto = <&mas_crypto>;
 
 		vdd_pronto_pll-supply = <&pm8950_l7>;
@@ -1956,13 +1998,22 @@
 		qcom,firmware-name = "wcnss";
 
 		/* GPIO inputs from wcnss */
-		qcom,gpio-err-fatal = <&smp2pgpio_ssr_smp2p_4_in 0 0>;
-		qcom,gpio-err-ready = <&smp2pgpio_ssr_smp2p_4_in 1 0>;
-		qcom,gpio-proxy-unvote = <&smp2pgpio_ssr_smp2p_4_in 2 0>;
-		qcom,gpio-stop-ack = <&smp2pgpio_ssr_smp2p_4_in 3 0>;
+		interrupts-extended = <&wakegic 0 153 1>,
+				<&wcnss_smp2p_in 0 0>,
+				<&wcnss_smp2p_in 2 0>,
+				<&wcnss_smp2p_in 1 0>,
+				<&wcnss_smp2p_in 3 0>;
 
-                /* GPIO output to wcnss */
-		qcom,gpio-force-stop = <&smp2pgpio_ssr_smp2p_4_out 0 0>;
+		interrupt-names = "qcom,wdog",
+				"qcom,err-fatal",
+				"qcom,proxy-unvote",
+				"qcom,err-ready",
+				"qcom,stop-ack";
+
+		/* GPIO output to wcnss */
+		qcom,smem-states = <&wcnss_smp2p_out 0>;
+		qcom,smem-state-names = "qcom,force-stop";
+
 		memory-region = <&reloc_mem>;
 	};
 
@@ -1989,7 +2040,6 @@
 		reg-names = "qdsp6_base", "halt_q6", "halt_modem", "halt_nc",
 				 "rmb_base", "restart_reg";
 
-		interrupts = <0 24 1>;
 		vdd_mss-supply = <&pm8950_s1>;
 		vdd_cx-supply = <&pm8950_s2_level>;
 		vdd_cx-voltage = <RPM_SMD_REGULATOR_LEVEL_TURBO>;
@@ -2019,14 +2069,24 @@
 		qcom,reset-clk;
 
 		/* GPIO inputs from mss */
-		qcom,gpio-err-fatal = <&smp2pgpio_ssr_smp2p_1_in 0 0>;
-		qcom,gpio-err-ready = <&smp2pgpio_ssr_smp2p_1_in 1 0>;
-		qcom,gpio-proxy-unvote = <&smp2pgpio_ssr_smp2p_1_in 2 0>;
-		qcom,gpio-stop-ack = <&smp2pgpio_ssr_smp2p_1_in 3 0>;
-		qcom,gpio-shutdown-ack = <&smp2pgpio_ssr_smp2p_1_in 7 0>;
+		interrupts-extended = <&wakegic 0 24 1>,
+				<&modem_smp2p_in 0 0>,
+				<&modem_smp2p_in 2 0>,
+				<&modem_smp2p_in 1 0>,
+				<&modem_smp2p_in 3 0>,
+				<&modem_smp2p_in 7 0>;
 
-		/* GPIO output to mss */
-		qcom,gpio-force-stop = <&smp2pgpio_ssr_smp2p_1_out 0 0>;
+		interrupt-names = "qcom,wdog",
+				"qcom,err-fatal",
+				"qcom,proxy-unvote",
+				"qcom,err-ready",
+				"qcom,stop-ack",
+				"qcom,shutdown-ack";
+
+		/* Outputs to mss */
+		qcom,smem-states = <&modem_smp2p_out 0>;
+		qcom,smem-state-names = "qcom,force-stop";
+
 		memory-region = <&modem_mem>;
 	};
 
