arm64: DT: msm8956: Rename pm8950-rpm-reg dts
Rename msm-pm8950-rpm-regulator.dtsi filename to pm8950-rpm-regulator.dtsi,
inorder to align with the current kernel naming convention.

Signed-off-by: Pavel Dubrova <pashadubrova@gmail.com>

--- a/arch/arm64/boot/dts/qcom/msm8956.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8956.dtsi
@@ -2097,13 +2097,10 @@
 	};
 };
 
-#include "msm-pm8950-rpm-regulator.dtsi"
-//#include "msm-pm8950.dtsi"
-//#include "msm-pmi8950.dtsi"
-//#include "msm-pm8004.dtsi"
 #include "pm8950.dtsi"
 #include "pmi8950.dtsi"
 #include "pm8004.dtsi"
+#include "pm8950-rpm-regulator.dtsi"
 #include "msm8956-regulator.dtsi"
 #include "msm8956-thermal.dtsi"
 #include "msm-gdsc-8916.dtsi"
