--- a/drivers/regulator/Kconfig
+++ b/drivers/regulator/Kconfig
@@ -704,6 +704,16 @@ config REGULATOR_QCOM_SPMI
 	  Qualcomm SPMI PMICs as a module. The module will be named
 	  "qcom_spmi-regulator".
 
+config REGULATOR_QPNP
+	tristate "Qualcomm Technologies, Inc. QPNP regulator support"
+	depends on SPMI
+	help
+	  This driver supports voltage regulators in Qualcomm Technologies, Inc.
+	  PMIC chips which comply with QPNP.  QPNP is a SPMI based PMIC
+	  implementation.  These chips provide several different varieties of
+	  LDO and switching regulators.  They also provide voltage switches and
+	  boost regulators.
+
 config REGULATOR_QPNP_AMOLED
         tristate "Qualcomm Technologies, Inc. QPNP AMOLED support"
         depends on SPMI
