iommu: qcom: Add snapshot of QCOM IOMMUv1 driver
This is snapshot of the QCOM IOMMUv1 driver from
my msm-4.9 implementation.
'commit b485e38 ("Revert "uapi: socket: Define sockaddr_storage
for new Android userspace")'.

Signed-off-by: Pavel Dubrova <pashadubrova@gmail.com>

--- a/drivers/iommu/Kconfig
+++ b/drivers/iommu/Kconfig
@@ -492,4 +492,6 @@ config QCOM_IOMMU
 	help
 	  Support for IOMMU on certain Qualcomm SoCs.
 
+source drivers/iommu/qcom/Kconfig
+
 endif # IOMMU_SUPPORT
