power: qpnp-smbcharger: Reduce debug spam in the kernel log
Add QPNP_SMBCHARGER_EXTENSION_DEBUG Kconfig option for
to display extended logs and debug driver information.

Also change QPNP_SMBCHARGER_EXTENSION to bool. The functionality
that turned on by this option is fully contained in the
driver on which it depends and always is a part of it, so
it doesn't make sense to make it tristate.

Signed-off-by: Pavel Dubrova <pashadubrova@gmail.com>

--- a/drivers/power/supply/qcom/Kconfig
+++ b/drivers/power/supply/qcom/Kconfig
@@ -110,10 +110,17 @@ config QPNP_SMBCHARGER
 	  power supply framework.
 
 config QPNP_SMBCHARGER_EXTENSION
-	tristate "QPNP SMB Charger driver extension"
+	bool "QPNP SMB Charger driver extension"
 	depends on QPNP_SMBCHARGER
 	help
 	  Say Y here to enable extensional QPNP SMB Charger driver functions.
+
+config QPNP_SMBCHARGER_EXTENSION_DEBUG
+	bool "QPNP SMB Charger driver extension debug"
+	depends on QPNP_SMBCHARGER_EXTENSION
+	help
+	  Say Y here to enable debug output for extensional QPNP SMB Charger
+	  driver functions.
 
 config QPNP_SMBCHARGER_ID_POLL
 	bool "Support ID polling function on QPNP SMB Charger driver"
