arm64: DT: qcom: Rename msm-gdsc-8916 for msm8956
Rename msm-gdsc-8916.dtsi filename to msm8956-gdsc.dtsi, in
order to align with the current kernel naming convention.

Signed-off-by: Pavel Dubrova <pashadubrova@gmail.com>

--- a/arch/arm64/boot/dts/qcom/msm8956.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8956.dtsi
@@ -2103,7 +2103,7 @@
 #include "pm8950-rpm-regulator.dtsi"
 #include "msm8956-regulator.dtsi"
 #include "msm8956-thermal.dtsi"
-#include "msm-gdsc-8916.dtsi"
+#include "msm8956-gdsc.dtsi"
 #include "msm8956-audio.dtsi"
 #include "msm8956-vidc.dtsi"
 #include "msm8956-camera.dtsi"
