arm64: DT: msm8956: Replace no-map-fixup with no-map
no-map-fixup feature was removed in db3a4b0 commit.

Signed-off-by: Pavel Dubrova <pashadubrova@gmail.com>

--- a/arch/arm64/boot/dts/qcom/msm8956.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8956.dtsi
@@ -103,7 +103,7 @@
 
 		modem_mem: modem_region@86c00000 {
 			compatible = "removed-dma-pool";
-			no-map-fixup;
+			no-map;
 			reg = <0x0 0x86c00000 0x0 0x05600000>;
 			label = "modem_mem";
 		};
