--- a/drivers/leds/Kconfig
+++ b/drivers/leds/Kconfig
@@ -415,9 +415,18 @@ config LEDS_PCA9956B
 	  LED driver chip accessed via the I2C bus. Supported
 	  devices include PCA9956B
 
+config LEDS_QPNP_FLASH
+	tristate "Support for QPNP Flash LEDs"
+	depends on LEDS_CLASS && MFD_SPMI_PMIC
+	help
+	  This driver supports the flash LED functionality of Qualcomm
+	  Technologies, Inc. QPNP PMICs.  This driver supports PMICs up through
+	  PM8994.  It can configure the flash LED target current for several
+	  independent channels.
+
 config LEDS_QPNP_FLASH_V2
-        tristate "Support for QPNP V2 Flash LEDs"
-        depends on LEDS_CLASS && MFD_SPMI_PMIC
+	tristate "Support for QPNP V2 Flash LEDs"
+	depends on LEDS_CLASS && MFD_SPMI_PMIC
 	select LEDS_TRIGGERS
         help
           This driver supports the flash V2 LED functionality of Qualcomm
