--- a/arch/arm64/boot/dts/qcom/msm8956.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8956.dtsi
@@ -90,8 +90,10 @@
 		};
 
 		smem_region: smem@86300000 {
+			compatible = "removed-dma-pool";
 			no-map;
 			reg = <0x0 0x86300000 0x0 0x00100000>;
+			label = "smem_region";
 		};
 
 		removed_region1: removed_region@86400000 {
