arm64: DT: msm8956: Fix clock control register for wcnss-wlan
We use downstream clock framework so RPMCC is not present.
All affected clocks controlled by GCC driver.

Signed-off-by: Pavel Dubrova <pashadubrova@gmail.com>

--- a/arch/arm64/boot/dts/qcom/msm8956.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8956.dtsi
@@ -1849,8 +1849,8 @@
 		gpios = <&msm_gpio 40 0>, <&msm_gpio 41 0>, <&msm_gpio 42 0>,
 			<&msm_gpio 43 0>, <&msm_gpio 44 0>;
 
-		clocks = <&clock_rpmcc clk_xo_wlan_clk>,
-			 <&clock_rpmcc clk_rf_clk2>,
+		clocks = <&clock_gcc clk_xo_wlan_clk>,
+			 <&clock_gcc clk_rf_clk2>,
 			 <&clock_debug clk_gcc_debug_mux>,
 			 <&clock_gcc clk_wcnss_m_clk>;
 
