--- a/arch/arm64/boot/dts/qcom/msm8956-v1.1.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8956-v1.1.dtsi
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015, The Linux Foundation. All rights reserved.
+ * Copyright (c) 2015-2016, The Linux Foundation. All rights reserved.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 and
@@ -10,6 +10,8 @@
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  * GNU General Public License for more details.
  */
+
+
 /*
  * NOTE:
  * As a general rule, only version-specific property overrides should be placed
@@ -20,7 +22,7 @@
 #include "msm8956.dtsi"
 
 / {
-	model = "Qualcomm Technologies, Inc. MSM8956v1.1";
+	model = "Qualcomm Technologies, Inc. MSM 8956v1.1";
 	compatible = "qcom,msm8956";
 	qcom,msm-id = <266 0x10001>;
 };
@@ -118,6 +120,33 @@
 			<  441600000 4>,
 			<  556800000 5>,
 			<  614400000 6>;
+		qcom,speed2-bin-v0-c0 =
+			<          0 0>,
+			<  400000000 1>,
+			<  691200000 2>,
+			<  806400000 3>,
+			< 1017600000 4>,
+			< 1190400000 5>,
+			< 1305600000 6>,
+			< 1382400000 7>,
+			< 1401600000 8>;
+		qcom,speed2-bin-v0-c1 =
+			<          0 0>,
+			<  400000000 1>,
+			<  883200000 2>,
+			< 1190400000 3>,
+			< 1382400000 4>,
+			< 1612800000 5>,
+			< 1747200000 6>,
+			< 1804800000 7>,
+			< 1958400000 8>;
+		qcom,speed2-bin-v0-cci =
+			<          0 0>,
+			<  307200000 1>,
+			<  403200000 3>,
+			<  441600000 4>,
+			<  556800000 5>,
+			<  614400000 6>;
 		#clock-cells = <1>;
 		ranges;
 		qcom,spm@0 {
@@ -137,7 +166,8 @@
 		/delete-property/ qcom,cpr-quotient-adjustment;
 
 		qcom,cpr-speed-bin-max-corners =
-				<0 0 2 4 8>;
+				<0 0 2 4 8>,
+				<2 0 2 4 8>;
 	};
 
 	apc1_vreg_corner: regulator@b118000 {
@@ -146,7 +176,8 @@
 		/delete-property/ qcom,cpr-quotient-adjustment;
 
 		qcom,cpr-speed-bin-max-corners =
-				<0 0 2 4 7>;
+				<0 0 2 4 7>,
+				<2 0 2 4 8>;
 	};
 
 	gfx_vreg_corner: regulator@98000 {
@@ -197,6 +228,20 @@
 
 &mdss_dsi {
 	/delete-property/ qcom,split-dsi-independent-pll;
+};
+
+&mdss_dsi0_pll {
+	qcom,ssc-enable;
+	qcom,ssc-frequency-hz = <30000>;
+	qcom,ssc-ppm = <5000>;
+	qcom,ssc-spread-mode = "down";
+};
+
+&mdss_dsi1_pll {
+	qcom,ssc-enable;
+	qcom,ssc-frequency-hz = <30000>;
+	qcom,ssc-ppm = <5000>;
+	qcom,ssc-spread-mode = "down";
 };
 
 &sdhc_1 {
