--- a/drivers/video/fbdev/msm/panel_driver/Kconfig
+++ b/drivers/video/fbdev/msm/panel_driver/Kconfig
@@ -17,8 +17,9 @@ config FB_MSM_MDSS_SPECIFIC_PANEL_INCELL
 	  Sony Xperia In-Cell Panel Driver support.
 
 config FB_MSM_MDSS_EARLY_UNBLANK
+	depends on FB_MSM_MDSS_SPECIFIC_PANEL_INCELL
 	bool
 	prompt "Sony Early Unblank feature for quick display wakeup"
-	default n
+	default y
 	---help---
 	  Sony Early Unblank feature for quick display wakeup.
